--- a/Jekyll Website/Lrfoster03/_config.yml
+++ b/Jekyll Website/Lrfoster03/_config.yml
@@ -18,21 +18,31 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Lrfoster03
+email: lrfoster03@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  I'm a 19 year robotics student studying Computer Science and Applied Mathematics 
+  at Washington State University in Pullman.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://Logoas.com" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: Lrfoster03
 github_username:  Lrfoster03
+linkedin_username: Logan-r-Foster
 
 # Build settings
+# theme: jekyll-theme-minimal
 theme: minima
 plugins:
   - jekyll-feed
+
+defaults: 
+  - 
+    scope: 
+      path: ""
+      type: "posts"
+    values: 
+      layout: "post"
+      title: "My Title"
 
 # Exclude from processing.
 # The following items will not be processed, by default.
